<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_CTRL_NCI" Id="{920ca892-04e6-0721-1758-14fe78e62635}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '2'}
TYPE ST_CTRL_NCI :
STRUCT
  eCmd        : e_Ctrl_NciCommand := e_Ctrl_NciCommand.INIT;
  rOverride   : REAL := 47.11;

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>