<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <POU Name="FB_Ctrl_NciChannel_empty" Id="{e5d79261-274d-0942-1e7d-9763194674f2}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_Ctrl_NciChannel_empty IMPLEMENTS I_Nci_Ctrl
VAR_INPUT
  eCmd                  : e_Ctrl_NciCommand;

END_VAR
VAR_OUTPUT
  sState                : STRING;
  nErrorId              : UDINT;
  bError                : BOOL;

  fPathVelo             : LREAL;
  nBlockNo              : UDINT;
  sProgLine             : STRING(100); 
  nMFunc                : INT;
  eState                : e_Ctrl_NciCommand;
END_VAR
VAR
  sCmd,
  sCmdOld,
  sCmdExec              : STRING(256);
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
sState := 'NCI not active, set compiler def if required';
eState := e_Ctrl_NciCommand.CMD_ERROR;

]]></ST>
    </Implementation>
    <Folder Name="properties" Id="{5320699b-7269-0e70-1dfd-c147bd4a170e}" />
    <Property Name="ChnId" Id="{27a36d94-cb55-0810-26f5-989c7ec96167}" FolderPath="properties\">
      <Declaration><![CDATA[PROPERTY ChnId : udint]]></Declaration>
      <Get Name="Get" Id="{de68319d-e6ee-0391-0bd4-b012c15e3452}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="GroupAxisConfig" Id="{4073198b-ba75-0bc1-3664-732145502fc2}" FolderPath="properties\">
      <Declaration><![CDATA[PROPERTY GroupAxisConfig : ST_3D_Group]]></Declaration>
      <Get Name="Get" Id="{47dcf556-cdde-0803-2a95-5503c6adb613}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{e3db7422-4119-0dba-3481-b400ed5b8195}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="I_AuxAxis" Id="{abe5766f-9cf3-0917-380f-6dc9a06d8a35}" FolderPath="properties\">
      <Declaration><![CDATA[PROPERTY I_AuxAxis : array[1..GVL_NCI.cAuxAxisCount] of I_McAxis]]></Declaration>
      <Get Name="Get" Id="{c798d77b-c27c-054e-1646-ac38cf97af64}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{698c5abb-1b7f-033e-2a3d-0cfdf914265e}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="I_McAxis" Id="{3d8bedcb-7906-0798-05ce-432985948552}" FolderPath="properties\">
      <Declaration><![CDATA[PROPERTY I_McAxis : array[1..GVL_NCI.cMcAxisCount] of I_McAxis]]></Declaration>
      <Get Name="Get" Id="{3da7f7a6-8216-0c75-17b3-890925884828}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{9a13692c-e292-0b63-3573-e485f0c18461}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="I_NcChannel" Id="{bf49324b-e00a-0294-26bf-acf9f2b4259c}" FolderPath="properties\">
      <Declaration><![CDATA[PROPERTY I_NcChannel : I_NciChannel]]></Declaration>
      <Get Name="Get" Id="{5a8c3afb-3068-0031-3d0b-25146424ab28}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="M_FuncReq" Id="{b190a296-d4a0-0639-2ca2-92fe68c4cde2}" FolderPath="properties\">
      <Declaration><![CDATA[PROPERTY M_FuncReq : word]]></Declaration>
      <Get Name="Get" Id="{c3265e6e-deb0-0039-176b-fab9c30fc5cc}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="NcProg" Id="{4fb86a33-bcb1-018c-2765-9475015da961}" FolderPath="properties\">
      <Declaration><![CDATA[PROPERTY NcProg : string(255)]]></Declaration>
      <Get Name="Get" Id="{cc419328-b363-0695-2812-381dce377d27}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{68ebae2c-c3df-0a63-1515-eb395183783f}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="R_Param_Read" Id="{ad828139-2712-0263-07cc-14e61ae201e2}" FolderPath="properties\">
      <Declaration><![CDATA[PROPERTY R_Param_Read : ARRAY [0..GVL_NCI.cRParamCount] OF lreal]]></Declaration>
      <Get Name="Get" Id="{42545674-52f9-0849-3f52-e402f64f1631}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{08ccbc2e-75ed-097d-028f-0ffb35516f72}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="R_Param_Write" Id="{3efb829b-23d3-0fa1-0b8c-e37291939572}" FolderPath="properties\">
      <Declaration><![CDATA[PROPERTY R_Param_Write : ARRAY [0..GVL_NCI.cRParamCount] OF lreal]]></Declaration>
      <Get Name="Get" Id="{5fabac7a-f1f3-05a0-02f8-e0b20d862fa6}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{38d7eac5-df2d-0964-17d9-3b258ae8478d}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="R_ParamCount" Id="{363723d7-876d-020f-3d53-a8260f5ee303}" FolderPath="properties\">
      <Declaration><![CDATA[PROPERTY R_ParamCount : DINT]]></Declaration>
      <Get Name="Get" Id="{61433a55-c40f-0269-0262-c16df3e57341}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{d639eaae-0372-0e6a-162b-392918129b6a}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="R_ParamIndex" Id="{e9a852c7-0f6e-029e-1a8a-99d17c8b5c5a}" FolderPath="properties\">
      <Declaration><![CDATA[PROPERTY R_ParamIndex : DINT]]></Declaration>
      <Get Name="Get" Id="{fd676bf7-fe68-01e7-1590-114c6a77b216}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{fde47fd9-1406-0af4-3cb4-4727454b8839}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Set>
    </Property>
    <LineIds Name="FB_Ctrl_NciChannel_empty">
      <LineId Id="30" Count="0" />
      <LineId Id="28" Count="1" />
      <LineId Id="31" Count="0" />
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="FB_Ctrl_NciChannel_empty.ChnId.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Ctrl_NciChannel_empty.GroupAxisConfig.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Ctrl_NciChannel_empty.GroupAxisConfig.Set">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Ctrl_NciChannel_empty.I_AuxAxis.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Ctrl_NciChannel_empty.I_AuxAxis.Set">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Ctrl_NciChannel_empty.I_McAxis.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Ctrl_NciChannel_empty.I_McAxis.Set">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Ctrl_NciChannel_empty.I_NcChannel.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Ctrl_NciChannel_empty.M_FuncReq.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Ctrl_NciChannel_empty.NcProg.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Ctrl_NciChannel_empty.NcProg.Set">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Ctrl_NciChannel_empty.R_Param_Read.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Ctrl_NciChannel_empty.R_Param_Read.Set">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Ctrl_NciChannel_empty.R_Param_Write.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Ctrl_NciChannel_empty.R_Param_Write.Set">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Ctrl_NciChannel_empty.R_ParamCount.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Ctrl_NciChannel_empty.R_ParamCount.Set">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Ctrl_NciChannel_empty.R_ParamIndex.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Ctrl_NciChannel_empty.R_ParamIndex.Set">
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>